--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ McGameJam-2020/[Bb]uilds/
 McGameJam-2020/[Ll]ogs/
 McGameJam-2020/[Mm]emoryCaptures/
 McGameJam-2020/[Ll]ibrary/[Aa]rtifacts/
+McGameJam-2020/[Ll]ibrary/[Aa]ssetsDatabase3
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
