--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,16 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+McGameJam-2020/Library/ScriptAssemblies/UnityEngine.UI.dll
+McGameJam-2020/Library/ScriptAssemblies/UnityEngine.TestRunner.dll
+McGameJam-2020/Library/ScriptAssemblies/UnityEditor.UI.dll
+McGameJam-2020/Library/ScriptAssemblies/UnityEditor.TestRunner.dll
+McGameJam-2020/Library/ScriptAssemblies/Unity.VSCode.Editor.dll
+McGameJam-2020/Library/ScriptAssemblies/Unity.Timeline.Editor.dll
+McGameJam-2020/Library/ScriptAssemblies/Unity.Timeline.dll
+McGameJam-2020/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll
+McGameJam-2020/Library/ScriptAssemblies/Unity.TextMeshPro.dll
+McGameJam-2020/Library/ScriptAssemblies/Unity.Rider.Editor.dll
+McGameJam-2020/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll
+McGameJam-2020/.DS_Store
+McGameJam-2020/.DS_Store
