--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,21 @@ McGameJam-2020/Library/ScriptAssemblies/Unity.Rider.Editor.dll
 McGameJam-2020/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll
 McGameJam-2020/.DS_Store
 McGameJam-2020/.DS_Store
+McGameJam-2020/Library/assetDatabase3
+McGameJam-2020/Library/expandedItems
+McGameJam-2020/Library/SceneVisibilityState.asset
+McGameJam-2020/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll
+McGameJam-2020/Library/ScriptAssemblies/Unity.Rider.Editor.dll
+McGameJam-2020/Library/ScriptAssemblies/Unity.TextMeshPro.dll
+McGameJam-2020/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll
+McGameJam-2020/Library/ScriptAssemblies/Unity.Timeline.dll
+McGameJam-2020/Library/ScriptAssemblies/Unity.Timeline.Editor.dll
+McGameJam-2020/Library/ScriptAssemblies/Unity.VSCode.Editor.dll
+McGameJam-2020/Library/ScriptAssemblies/UnityEditor.TestRunner.dll
+McGameJam-2020/Library/ScriptAssemblies/UnityEditor.UI.dll
+McGameJam-2020/Library/ScriptAssemblies/UnityEngine.TestRunner.dll
+McGameJam-2020/Library/ScriptAssemblies/UnityEngine.UI.dll
+McGameJam-2020/Library/ShaderCache/EditorEncounteredVariants
+McGameJam-2020/Library/shadercompiler-UnityShaderCompiler1.log
+McGameJam-2020/Library/shadercompiler-UnityShaderCompiler2.log
+McGameJam-2020/Library/StateCache/SceneView/a55cf6-mainStage.json
