Added Pause Menu UI in 'lake 1'

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,10 @@ McGameJam-2020/Library/ShaderCache/EditorEncounteredVariants
 McGameJam-2020/Library/shadercompiler-UnityShaderCompiler1.log
 McGameJam-2020/Library/shadercompiler-UnityShaderCompiler2.log
 McGameJam-2020/Library/StateCache/SceneView/a55cf6-mainStage.json
+McGameJam-2020/Library/assetDatabase3
+McGameJam-2020/Library/SceneVisibilityState.asset
+McGameJam-2020/Library/ScriptMapper
+McGameJam-2020/Library/ShaderCache/EditorEncounteredVariants
+McGameJam-2020/Library/shadercompiler-UnityShaderCompiler0.log
+McGameJam-2020/Library/shadercompiler-UnityShaderCompiler1.log
+McGameJam-2020/Library/shadercompiler-UnityShaderCompiler2.log
